--- a/src/partials/card-modal.html
+++ b/src/partials/card-modal.html
@@ -1,34 +1,54 @@
 <div class="backdrop is-hidden" data-modal>
-    <div class="modal">
-           <button type="button" class="close-btn">
-              <svg class="close-btn__icon">
-                  <use href="/src/images/sprite.svg#icon-close"></use>
-              </svg>
-           </button>
-        <div class="modal_content">
-             <div class="poster">
-                <picture>
+  <div class="modal">
+    <button type="button" class="close-btn">
+      <svg class="close-btn__icon">
+        <use href="/src/images/sprite.svg#icon-close"></use>
+      </svg>
+    </button>
+    <div class="modal_content">
+      <div class="poster">
+        <picture>
+          <img src="#" alt="moviesPoster" />
+        </picture>
+      </div>
 
-                    <img src="#" alt="moviesPoster"/>
-                </picture>
-             </div>
-
-             <div class="content">
-                <h2 class="film_title"></h2>
-                    <div class="title-position">
-                       <ul class="title_list_position">
-                            <li class="title_item_id is-hidden"></li>
-                            <li class="title_item"><span class="title_list_value a">Vote / Votes</span><span class="contents_value"><span class="highlight vote_average"></span> / <span class="highlight_all vote_count"></span></span></li>
-                            <li class="title_item"><span class="title_list_value b">Popularity</span><span class="contents_value popularity"></span></li>
-                            <li class="title_item"><span class="title_list_value c">Original Title</span><span class="contents_value original_title"></span></li>
-                            <li class="title_item"><span class="title_list_value d">Genre</span><span class="contents_value genres"></span></li>
-                       </ul>                  
-                    </div>
-                      <h3 class="description_title">About</h3>
-                      <p class="description"></p>
-                    <button class="modal_card_btn is-active wached">ADD TO WATCHED</button>
-                    <button class="modal_card_btn queue">ADD TO QUEUE</button>
-             </div>
+      <div class="content">
+        <h2 class="film_title"></h2>
+        <div class="title-position">
+          <ul class="title_list_position">
+            <li class="title_item_id is-hidden"></li>
+            <li class="title_item">
+              <span class="title_list_value a">Vote / Votes</span
+              ><span class="contents_value"
+                ><span class="highlight vote_average"></span> /
+                <span class="highlight_all vote_count"></span
+              ></span>
+            </li>
+            <li class="title_item">
+              <span class="title_list_value b">Popularity</span
+              ><span class="contents_value popularity"></span>
+            </li>
+            <li class="title_item">
+              <span class="title_list_value c">Original Title</span
+              ><span class="contents_value original_title"></span>
+            </li>
+            <li class="title_item">
+              <span class="title_list_value d">Genre</span
+              ><span class="contents_value genres"></span>
+            </li>
+          </ul>
         </div>
+        <h3 class="description_title">About</h3>
+        <p class="description"></p>
+        <button class="modal_card_btn is-active wached">ADD TO WATCHED</button>
+        <button class="modal_card_btn queue">ADD TO QUEUE</button>
+        <button class="open__video_bnt modal_card_btn" type="button">
+          <svg class="watch-icon" width="28" , height="28">
+            <use href="./images/sprite.svg#icon-youtube"></use>
+          </svg>
+          Watch Trailer
+        </button>
+      </div>
     </div>
+  </div>
 </div>
