--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -17,3 +17,4 @@
 @import './my_library/btn-to-top';
 @import './utils/color-switcher';
 @import './utils/_card-modal.scss';
+@import './utils/iframe';
