--- a/src/sass/utils/_color-switcher.scss
+++ b/src/sass/utils/_color-switcher.scss
@@ -1,16 +1,12 @@
 .color-switcher {
   position: absolute;
-  bottom: 0px;
-  right: 15px;
+  bottom: 24px;
+  right: 60px;
+  @include tablet {
+    right: 75px;
+  }
 }
 
-.menu-switch {
-  position: relative;
-  margin-top: 10px;
-}
-.menu-switch__label {
-  position: relative;
-}
 .menu-switch__thumb::before {
   content: '';
   position: absolute;
