Виправлено постер у модалці

--- a/src/partials/card-modal.html
+++ b/src/partials/card-modal.html
@@ -9,7 +9,7 @@
              <div class="poster">
                 <picture>
 
-                    <img src="#" alt="moviesPoster"/>
+                    <img class="fff" src="#" alt="moviesPoster"/>
                 </picture>
              </div>
 
