--- a/src/sass/utils/_card-modal.scss
+++ b/src/sass/utils/_card-modal.scss
@@ -24,18 +24,18 @@
   transform: translate(-50%, -50%);
   width: 618px;
   min-height: 562px;
-  padding: 42px 28px 40px 28px;
+  padding: 40px 28px 40px 28px;
 
   @media screen and (min-width: 1024px) {
     width: 882px;
     height: 568px;
-    padding: 50px 30px 40px 30px;
+    padding: 40px 30px 40px 30px;
   }
 
   @media screen and (max-width: 767px) {
     width: 280px;
     height: 100%;
-    padding: 48px 20px 40px 20px;
+    padding: 40px 20px 40px 20px;
     overflow-y: auto;
   }
 }
@@ -81,9 +81,16 @@
     fill: $warning-text-color;
   }
 }
-.poster {
+.fff {
   max-width: 100%;
+  height: 490px;
   margin-right: 30px;
+  border-radius: 2%;
+
+  @media screen and (min-width: 768px) and (max-width: 1024px) {
+    width: 270px;
+    margin-right: 20px;
+  }
 
   
   @media screen and (max-width: 768px) {
@@ -93,10 +100,12 @@
   }
 }
 
+
+
 .content {
   width: 240px;
   @media screen and (min-width: 768px) and (max-width: 1024px) {
-    width: 267px;
+    width: 230px;
   }
 
   @media screen and (min-width: 1024px) {
