--- a/src/partials/card-modal.html
+++ b/src/partials/card-modal.html
@@ -44,7 +44,7 @@
         <button class="modal_card_btn queue">ADD TO QUEUE</button>
         <button class="open__video_bnt modal_card_btn" type="button">
           <svg class="watch-icon" width="28" , height="28">
-            <use href="./images/sprite.svg#icon-youtube"></use>
+            <use href="./images/sprite.svg#icon-youtube-svgrepo-com"></use>
           </svg>
           Watch Trailer
         </button>
