change header bg
додав бекграунд хедера для бібліотеки і ретину 3x для бекграунду хедера, перевів всі зображення бекграунду в формат webp, трішки змінив позиціонування перемикача теми

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,7 +5,7 @@
 
 @import './utils/common';
 @import './utils/hidden';
-
+@import './header-bg-img';
 @import './header';
 @import './my_library/header';
 @import './utils/main-gallery.scss';
