--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,7 +1,6 @@
 $white: #ffffff;
 $black: #000000;
 
-
 // todo ===========
 
 // Background colors
@@ -9,6 +8,7 @@ $primary-background-color: #ffffff;
 $footer-background-color: #f7f7f7;
 $header-background-color: rgba(0, 0, 0, 0.56);
 $accent-color: #ff6b08;
+$bg-img-gradient: rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56);
 
 // Text colors
 $primary-text-color: #000000;
