--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,51 +1,14 @@
 .header {
-  background-color: gray;
-  isolation: isolate;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
   margin: 0 auto;
   min-width: 320px;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-    url(../images/header-bg/header-bkg-mobile-1@1x.png);
 
-  @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-      url(../images/header-bg/header-bkg-mobile-1@2x.png);
-  }
-  @include tablet {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-      url(../images/header-bg/header-bkg-tablet-1@1x.png);
-    @media (min-device-pixel-ratio: 2),
-      (min-resolution: 192dpi),
-      (min-resolution: 2dppx) {
-      background-image: linear-gradient(
-          rgba(0, 0, 0, 0.56),
-          rgba(0, 0, 0, 0.56)
-        ),
-        url(../images/header-bg/header-bkg-tablet-1@2x.png);
-    }
-  }
-  @include desktop {
-    background-image: linear-gradient(
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url(../images/header-bg/header-bkg-desktop-1@1x.png);
-    @media (min-device-pixel-ratio: 2),
-      (min-resolution: 192dpi),
-      (min-resolution: 2dppx) {
-      background-image: linear-gradient(
-          rgba(0, 0, 0, 0.56),
-          rgba(0, 0, 0, 0.56)
-        ),
-        url(../images/header-bg/header-bkg-desktop-1@2x.png);
-    }
-  }
+  background-color: #212121;
+  isolation: isolate;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
 }
 .header-container {
   font-weight: 500;
