--- a/src/sass/utils/_color-switcher.scss
+++ b/src/sass/utils/_color-switcher.scss
@@ -1,7 +1,10 @@
 .color-switcher {
   position: absolute;
-  bottom: 0px;
-  right: 15px;
+  bottom: -10px;
+  right: 55px;
+  @include tablet {
+    bottom: 0;
+  }
 }
 
 .menu-switch {
