--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -72,19 +72,6 @@
     font-size: 30px;
   }
 }
-
-.hero__search-error {
-  color: $warning-text-color;
-  margin: 0 auto;
-}
-.is-hidden {
-  visibility: hidden;
-  pointer-events: none;
-  height: 1px;
-  width: 1px;
-  margin: -1px;
-  position: absolute;
-}
 .nav-list {
   margin-right: 30px;
   display: flex;
@@ -202,6 +189,19 @@
   border: none;
   width: 20px;
   outline: none;
+}
+.hero__search-error {
+  color: $warning-text-color;
+  display: flex;
+  justify-content: center;
+}
+.is-hidden {
+  visibility: hidden;
+  pointer-events: none;
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  position: absolute;
 }
 
 ::-webkit-input-placeholder {
