--- a/src/partials/card-modal.html
+++ b/src/partials/card-modal.html
@@ -11,8 +11,6 @@
           <img src="#" alt="moviesPoster" />
         </picture>
       </div>
-
-      <<<<<<< HEAD
       <div class="content">
         <h2 class="film_title"></h2>
         <div class="title-position">
@@ -62,8 +60,12 @@
         </div>
         <h3 class="description_title">About</h3>
         <p class="description"></p>
-        <button class="modal_card_btn is-active wached">ADD TO WATCHED</button>
-        <button class="modal_card_btn queue">ADD TO QUEUE</button>
+        <div class="btn_wraper">
+          <button class="modal_card_btn is-active wached">
+            ADD TO WATCHED
+          </button>
+          <button class="modal_card_btn queue">ADD TO QUEUE</button>
+        </div>
         <button class="open__video_bnt modal_card_btn" type="button">
           <svg class="watch-icon" width="28" , height="28">
             <use href="./images/sprite.svg#icon-youtube-svgrepo-com"></use>
