--- a/src/sass/utils/_card-modal.scss
+++ b/src/sass/utils/_card-modal.scss
@@ -22,21 +22,21 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 618px;
-  min-height: 562px;
-  padding: 42px 28px 40px 28px;
+  width: 280px;
+  // min-height: 940px;
+  padding: 48px 20px 40px 20px;
 
-  @media screen and (min-width: 1024px) {
-    width: 882px;
-    height: 568px;
-    padding: 50px 30px 40px 30px;
+  @media screen and (min-width: 768px) {
+    width: 704px;
+    height: 552px;
+    padding: 40px 36px 40px 36px;
+    overflow-y: auto;
   }
 
-  @media screen and (max-width: 767px) {
-    width: 280px;
-    height: 100%;
-    padding: 48px 20px 40px 20px;
-    overflow-y: auto;
+  @media screen and (min-width: 1280px) {
+    width: 806px;
+    height: 558px;
+    padding: 50px 30px 40px 30px;
   }
 }
 
@@ -93,12 +93,12 @@
 
 .content {
   width: 240px;
-  @media screen and (min-width: 768px) and (max-width: 1024px) {
-    width: 267px;
+  @media screen and (min-width: 768px) {
+    width: 264px;
   }
 
-  @media screen and (min-width: 1024px) {
-    width: 395px;
+  @media screen and (min-width: 1280px) {
+    width: 391px;
   }
 }
 
@@ -161,6 +161,7 @@
   font-weight: $modal-font-weight;
   font-size: 12px;
   line-height: 1.67;
+  text-align: justify;
 }
 
 .modal_card_btn {
@@ -268,4 +269,8 @@ ul {
 
 .watch-icon {
   margin-right: 4px;
+}
+
+.btn_wraper {
+  display: flex;
 }
