--- a/src/sass/utils/_card-modal.scss
+++ b/src/sass/utils/_card-modal.scss
@@ -38,7 +38,7 @@
     height: 100%;
     padding: 40px 20px 40px 20px;
     overflow-y: auto;
-
+  }
 
   @media screen and (min-width: 768px) {
     width: 704px;
