--- a/src/sass/my_library/_btn-to-top.scss
+++ b/src/sass/my_library/_btn-to-top.scss
@@ -23,7 +23,8 @@
   opacity: 0.5;
   &:hover,
   &:focus {
-    box-shadow: 2px 4px 8px rgba(153, 0, 38, 0.1);
+    color: $accent-color;
+    // box-shadow: 2px 4px 8px rgba(153, 0, 38, 0.1);
     opacity: 1;
   }
 }
@@ -32,6 +33,12 @@
   align-items: center;
   justify-content: center;
   color: #424242;
+  transition: color 400ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: $accent-color;
+    // box-shadow: 2px 4px 8px rgba(153, 0, 38, 0.1);
+  }
 }
 
 .btn-to-top__icon {
