--- a/src/sass/my_library/_header.scss
+++ b/src/sass/my_library/_header.scss
@@ -30,6 +30,7 @@
   transition-timing-function: box-shadow cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover {
+    background-color: $accent-color;
     box-shadow: 0px 3px 2px rgba(255, 255, 255, 0.2),
       0px 1px 2px rgba(255, 255, 255, 0.16),
       0px 2px 2px rgba(255, 255, 255, 0.24);
