--- a/src/sass/utils/_card-modal.scss
+++ b/src/sass/utils/_card-modal.scss
@@ -23,35 +23,21 @@
   left: 50%;
   transform: translate(-50%, -50%);
 
-  width: 618px;
-  min-height: 562px;
-  padding: 40px 28px 40px 28px;
-
-  @media screen and (min-width: 1024px) {
-    width: 882px;
-    height: 568px;
-    padding: 40px 30px 40px 30px;
-  }
-
-  @media screen and (max-width: 767px) {
-    width: 280px;
-    height: 100%;
-    padding: 40px 20px 40px 20px;
-    overflow-y: auto;
-  }
+  width: 280px;
+  max-height: 940px;
+  padding: 48px 20px 40px 20px;
 
   @media screen and (min-width: 768px) {
     width: 704px;
     height: 552px;
-    padding: 40px 36px 40px 36px;
+    padding: 40px 72px 27px 36px;
     overflow-y: auto;
   }
 
   @media screen and (min-width: 1280px) {
     width: 806px;
     height: 558px;
-    padding: 50px 30px 40px 30px;
-
+    padding: 40px 30px 40px 30px;
   }
 }
 
@@ -96,31 +82,37 @@
   }
 }
 .fff {
-  max-width: 100%;
-  height: 490px;
-  margin-right: 30px;
+  width: 240px;
+  height: 357px;
   border-radius: 2%;
 
-  @media screen and (min-width: 768px) and (max-width: 1024px) {
-    width: 270px;
-    margin-right: 20px;
+  @media screen and (min-width: 768px) {
+    width: 264px;
+    height: 373px;
   }
 
-  @media screen and (max-width: 768px) {
-    width: 240px;
-    height: 356px;
-    margin-bottom: 30px;
+  @media screen and (min-width: 1280px) {
+    width: 375px;
+    height: 478px;
   }
 }
+.poster {
+  margin-bottom: 20px;
 
+  @media screen and (min-width: 768px) {
+    margin-right: 68px;
+  }
 
+  @media screen and (min-width: 1280px) {
+    margin-right: 16px;
+  }
+}
 
 .content {
   width: 240px;
 
-  @media screen and (min-width: 768px) and (max-width: 1024px) {
-    width: 230px;
-
+  @media screen and (min-width: 768px) {
+    width: 264px;
   }
 
   @media screen and (min-width: 1280px) {
@@ -184,6 +176,7 @@
 }
 
 .description {
+  margin-bottom: 20px;
   font-weight: $modal-font-weight;
   font-size: 12px;
   line-height: 1.67;
@@ -191,13 +184,13 @@
 }
 
 .modal_card_btn {
-  width: 112px;
+  width: 110px;
   height: 44px;
   font-weight: $modal-font-weight;
   font-size: 12px;
   line-height: 1.33;
   text-transform: uppercase;
-  margin-top: 20px;
+
   border-radius: 5px;
   cursor: pointer;
   border: none;
@@ -206,11 +199,11 @@
   background-color: $primary-background-color;
   transition: background-color, color, scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  @media screen and (min-width: 768px) and (max-width: 1024px) {
-    width: 116px;
+  @media screen and (min-width: 768px) {
+    width: 125px;
   }
 
-  @media screen and (min-width: 1024px) {
+  @media screen and (min-width: 1280px) {
     width: 136px;
   }
 }
@@ -218,20 +211,16 @@
 .modal_card_btn:hover,
 .modal_card_btn:focus {
   color: $primary-background-color;
-  background-color: $warning-text-color;
+  background-color: $accent-color;
   outline: none;
   scale: 1.09;
 }
 
 .modal_card_btn:not(:last-child) {
-  margin-right: 15px;
+  margin-right: 20px;
 
-  @media screen and (min-width: 768px) and (max-width: 1024px) {
-    margin-right: 12px;
-  }
-
-  @media screen and (max-width: 767px) {
-    margin-right: 11px;
+  @media screen and (min-width: 768px) {
+    margin-right: 15px;
   }
 }
 
@@ -241,7 +230,7 @@
   font-weight: $modal-font-weight;
   font-size: 12px;
   line-height: 1.33;
-  margin-top: 20px;
+
   border-radius: 5px;
   cursor: pointer;
   border: none;
@@ -254,9 +243,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
 
   @media screen and (max-width: 1279px) {
     padding-left: 8px;
+  }
+  @media screen and (min-width: 768px) {
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
@@ -266,7 +261,7 @@ ul {
 }
 
 .highlight {
-  background-color: $warning-text-color;
+  background-color: $accent-color;
   color: $primary-background-color;
   border-radius: 5px;
   padding: 1px 7px;
@@ -299,4 +294,5 @@ ul {
 
 .btn_wraper {
   display: flex;
+  margin-bottom: 20px;
 }
