--- a/src/sass/utils/main-gallery.scss
+++ b/src/sass/utils/main-gallery.scss
@@ -52,13 +52,13 @@
 
 .gallery__item {
   background-color: transparent;
-
   border-radius: 5px;
-  // color: rgb(255, 107, 8);
+  transition: box-shadow, scale 250ms cubic-bezier(0.075, 0.82, 0.165, 1);
+
   &:hover,
   &:focus {
-    box-shadow: 0px 1px 1px rgba(255, 107, 8, 0.12),
-      0px 4px 4px rgba(255, 107, 8, 0.06), 1px 4px 6px rgba(255, 107, 8, 0.16);
+    box-shadow: 10px 7px 13px -6px rgba(255, 107, 8, 0.72);
+    scale: 1.02;
   }
   @include tablet {
     flex-basis: calc((100% - 2 * 30px) / 2);
@@ -98,14 +98,15 @@
 }
 
 .gallery-card__title {
-  @include font($primary-font-size, 1.2, 500, none);
+  text-transform: uppercase;
+  @include font($primary-font-size, 1.16, 500, none);
   font-style: normal;
   font-family: 'Roboto';
   @include tablet {
-    @include font(none, 1.3, none, none);
+    @include font(none, 1.33, none, none);
   }
   @include desktop {
-    @include font(20px, 1.16, none, none);
+    @include font(20px, 1.2, none, none);
   }
 }
 .gallery-card__genre {
