--- a/src/partials/card-modal.html
+++ b/src/partials/card-modal.html
@@ -17,7 +17,7 @@
         <h2 class="film_title"></h2>
         <div class="title-position">
           <ul class="title_list_position">
-            <li class="title_item_id is-hidden"></li>
+            <li class="title_item_info is-hidden" style="width: 250px;"></li>
             <li class="title_item">
               <span class="title_list_value a">Vote / Votes</span
               ><span class="contents_value"
