--- a/src/partials/card-modal.html
+++ b/src/partials/card-modal.html
@@ -62,12 +62,10 @@
         <h3 class="description_title">About</h3>
         <p class="description"></p>
         <div class="btn_wraper">
-          <!-- <button class="modal_card_btn is-active wached" data-watched="add">
+          <!-- <button class="modal_card_btn is-active wached">
             ADD TO WATCHED
           </button>
-          <button class="modal_card_btn queue" data-qeue="remove">
-            ADD TO QUEUE
-          </button> -->
+          <button class="modal_card_btn queue">ADD TO QUEUE</button> -->
         </div>
         <button class="open__video_bnt modal_card_btn" type="button">
           <svg class="watch-icon" width="28" , height="28">
