--- a/src/partials/card-modal.html
+++ b/src/partials/card-modal.html
@@ -62,6 +62,8 @@
         <h3 class="description_title">About</h3>
         <p class="description"></p>
         <div class="btn_wraper">
+          <button class="modal_card_btn is-active wached" data-watched></button>
+          <button class="modal_card_btn queue" data-qeue></button>
           <!-- <button class="modal_card_btn is-active wached">
             ADD TO WATCHED
           </button>
