--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -37,10 +37,10 @@
 }
 
 .hero__search-error {
+  position: absolute;
+  bottom: 0;
   color: $warning-text-color;
-  text-align: start;
   @media screen and (min-width: 768px) {
-    text-align: center;
   }
 }
 .is-hidden {
@@ -135,13 +135,24 @@
 .search {
   margin-top: 54px;
   font-size: 14px;
+  position: relative;
+  padding-bottom: 40px;
+  @include tablet {
+    padding-bottom: 30px;
+  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .search__form {
   display: flex;
-  max-width: 340px;
+  width: 100%;
+  @include tablet {
+    width: 340px;
+  }
   height: 20px;
   margin: 0 auto;
-  margin-bottom: 20px;
+  // margin-bottom: 20px;
   border-bottom: 0.2px solid #f7f7f7bd;
 }
 .search__form:hover,
