--- a/src/partials/main/main.html
+++ b/src/partials/main/main.html
@@ -2,13 +2,23 @@
   <section class="gallery-section">
     <div class="container">
       <div class="sign-in-wrapper visually-hidden">
-          <img id="img-sign-in" src="./images/sign-in.png">
+        <img id="img-sign-in" src="./images/sign-in.png" />
       </div>
       <div class="gallery">
         <h2 class="visually-hidden">MOVIES GALLERY</h2>
+        <p class="hero__search-error is-hidden">
+          Search result not successful. Enter the correct movie name and try
+          again!
+        </p>
+        <div class="empty__request is-hidden">
+          <img
+            src="https://cdn.pixabay.com/photo/2016/08/21/16/31/emoticon-1610228_1280.png"
+            alt="smail"
+            width="500"
+          />
+        </div>
 
         <ul class="gallery__list">
-        
           <!-- <li class="gallery__item">
             <div class="gallery-card"></div>
 
@@ -30,9 +40,7 @@
             </p>
           </li> -->
         </ul>
-        <ul class="gallery__list--library visually-hidden">
-      
-        </ul>
+        <ul class="gallery__list--library visually-hidden"></ul>
       </div>
     </div>
   </section>
