--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -73,10 +73,10 @@
         </button>
       </form>
 
-      <p class="hero__search-error is-hidden">
+      <!-- <p class="hero__search-error is-hidden">
         Search result not successful. Enter the correct movie name and try
         again!
-      </p>
+      </p> -->
     </div>
     <div class="library-filter visually-hidden">
       <button type="button" class="library-filter__btn" data-watched>
