--- a/src/partials/card-modal.html
+++ b/src/partials/card-modal.html
@@ -61,6 +61,14 @@
         </div>
         <h3 class="description_title">About</h3>
         <p class="description"></p>
+        <div class="trailerBtnWraper">
+          <button class="modal_card_btn open__video_bnt" type="button">
+            <svg class="watch-icon" width="28" , height="28">
+              <use href="./images/sprite.svg#icon-youtube-svgrepo-com"></use>
+            </svg>
+            Watch Trailer
+          </button>
+        </div>
         <div class="btn_wraper">
           <button class="modal_card_btn is-active wached" data-watched></button>
           <button class="modal_card_btn queue" data-qeue></button>
@@ -69,12 +77,6 @@
           </button>
           <button class="modal_card_btn queue">ADD TO QUEUE</button> -->
         </div>
-        <button class="open__video_bnt modal_card_btn" type="button">
-          <svg class="watch-icon" width="28" , height="28">
-            <use href="./images/sprite.svg#icon-youtube-svgrepo-com"></use>
-          </svg>
-          Watch Trailer
-        </button>
       </div>
     </div>
   </div>
