--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -78,7 +78,7 @@
   flex-wrap: wrap;
   padding: 5px;
   margin: 185px -15px 15px -15px;
-  max-width: 200px;
+  max-width: 25vh;
 
   background-color: $white;
   border-radius: 15px;
