--- a/src/sass/utils/_card-modal.scss
+++ b/src/sass/utils/_card-modal.scss
@@ -24,7 +24,8 @@
   transform: translate(-50%, -50%);
 
   width: 280px;
-  max-height: 940px;
+  max-height: 99vh;
+  overflow-x: scroll;
   padding: 48px 20px 40px 20px;
 
   @media screen and (min-width: 768px) {
