change open trailer button

--- a/src/partials/card-modal.html
+++ b/src/partials/card-modal.html
@@ -62,12 +62,10 @@
         <h3 class="description_title">About</h3>
         <p class="description"></p>
         <div class="trailerBtnWraper">
-          <button class="modal_card_btn open__video_bnt" type="button">
-            <svg class="watch-icon" width="28" , height="28">
-              <use href="./images/sprite.svg#icon-youtube-svgrepo-com"></use>
-            </svg>
-            Watch Trailer
-          </button>
+          <svg class="watch-icon" width="38" , height="38">
+            <use href="./images/sprite.svg#icon-cinema-camera"></use>
+          </svg>
+          <button class="open__video_bnt" type="button">Watch Trailer</button>
         </div>
         <div class="btn_wraper">
           <button class="modal_card_btn is-active wached" data-watched></button>
