--- a/src/sass/utils/_card-modal.scss
+++ b/src/sass/utils/_card-modal.scss
@@ -243,19 +243,6 @@
   background-color: $primary-background-color;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.open__video_bnt {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 8px;
-
-  @media screen and (min-width: 1280px) {
-    margin-right: 150px;
-  }
-}
 
 ul {
   margin-top: 0;
@@ -302,5 +289,39 @@ ul {
 }
 
 .trailerBtnWraper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 20px;
+
+  &:hover,
+  &:focus {
+    scale: 1.1;
+    color: $accent-color;
+  }
+
+  @media screen and (min-width: 1280px) {
+    width: 147px;
+    margin-left: 72px;
+  }
+}
+
+.watch-icon {
+  fill: currentColor;
+}
+
+.open__video_bnt {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  border: none;
+  cursor: pointer;
+  background-color: transparent;
+  margin-left: 8px;
+  text-transform: uppercase;
+  font-weight: $modal-font-weight;
+  font-size: 12px;
+  line-height: 1.33;
+  outline: none;
 }
