fix-someBugs-inValidation

--- a/src/partials/card-modal.html
+++ b/src/partials/card-modal.html
@@ -62,7 +62,7 @@
         <h3 class="description_title">About</h3>
         <p class="description"></p>
         <div class="trailerBtnWraper">
-          <svg class="watch-icon" width="38" , height="38">
+          <svg class="watch-icon" width="38" height="38">
             <use href="./images/sprite.svg#icon-cinema-camera"></use>
           </svg>
           <button class="open__video_bnt" type="button">Watch Trailer</button>
