--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,8 +10,8 @@
         </a>
       </div>
       <div class="header-control">
-        <nav class="nav-list">
-          <ul>
+        <nav>
+          <ul class="nav-list">
             <li class="nav-list__item-home">
               <a
                 href="#"
