--- a/src/partials/main/main.html
+++ b/src/partials/main/main.html
@@ -1,5 +1,6 @@
 <main>
   <section class="gallery-section">
+    <h1 class="visually-hidden">Filmoteka</h1>
     <div class="container">
       <div class="sign-in-wrapper visually-hidden">
         <img id="img-sign-in" src="./images/sign-in.png" alt="PLEASE SIGN IN" />
