make mobile menu

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,7 +2,7 @@
 
 @import './utils/mixins';
 @import './utils/variables';
-
+@import './mob_menu';
 @import './utils/common';
 @import './utils/hidden';
 @import './header-bg-img';
