--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,7 +11,7 @@
       </div>
       <div class="header-control">
         <nav class="nav-list">
-          <li class="nav-list__item-home">
+          <li class="nav-list__item-home nav-list__item">
             <a
               href="#"
               class="nav-list__link-home header-control__btn--focus link nav-list__link--selected"
@@ -21,7 +21,7 @@
               >HOME</a
             >
           </li>
-          <li class="nav-list__item-library">
+          <li class="nav-list__item-library nav-list__item">
             <a
               href="#"
               class="nav-list__link-library header-control__btn--focus link"
@@ -52,6 +52,11 @@
             </button>
           </div>
         </div>
+        <button class="mob-menu__open-btn" data-menu-open>
+          <svg class="mob-menu__open-icon" width="40" , height="40">
+            <use href="./images/sprite.svg#icon-menu"></use>
+          </svg>
+        </button>
       </div>
     </div>
     <div class="search">
