--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,9 +1,9 @@
 .header {
   margin: 0 auto;
   min-width: 320px;
-  padding-top: 40px;
-  padding-bottom: 40px;
 
+  padding-bottom: 40px;
+  overflow: hidden;
   background-color: #212121;
   isolation: isolate;
   background-size: cover;
@@ -11,6 +11,7 @@
   background-position: 50% 50%;
 }
 .header-container {
+  padding-top: 40px;
   font-weight: 500;
   position: relative;
   line-height: 1.17;
@@ -22,6 +23,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  z-index: 10;
   &__img {
     width: 25px;
     height: 25px;
@@ -64,7 +67,6 @@
   position: absolute;
 }
 .nav-list {
-  margin-right: 30px;
   display: flex;
   column-gap: 20px;
   // margin: 0 auto;
@@ -75,6 +77,7 @@
     margin-right: 60px;
   }
 }
+
 .sign-in__button {
   display: flex;
   align-items: center;
@@ -89,11 +92,11 @@
 .header-control {
   margin-left: auto;
   display: flex;
+  align-items: center;
   @include tablet {
     align-items: center;
   }
 
-  margin-top: 5px;
   @include desktop {
     margin-top: 10px;
   }
@@ -108,20 +111,15 @@
 }
 .display-name {
   display: block;
-  margin-bottom: 5px;
-  @include tablet {
-    margin-bottom: 0;
-    margin-right: 10px;
-  }
+
+  margin-right: 10px;
 
   color: #ffffff;
   font-size: $primary-font-size;
 }
 .autorization__log-in {
-  @include tablet {
-    display: flex;
-    align-items: center;
-  }
+  display: flex;
+  align-items: center;
 }
 .nav-list__link--selected {
   position: relative;
@@ -210,4 +208,12 @@
 }
 :-ms-input-placeholder {
   color: $lighter-text-color;
+}
+.header-mob-menu {
+  position: fixed;
+  top: 0;
+}
+.header-mob-menu__wrap {
+  display: flex;
+  align-items: center;
 }
