--- a/src/partials/main/main.html
+++ b/src/partials/main/main.html
@@ -11,11 +11,7 @@
           again!
         </p>
         <div class="empty__request is-hidden">
-          <img
-            src="https://cdn.pixabay.com/photo/2016/08/21/16/31/emoticon-1610228_1280.png"
-            alt="smail"
-            width="500"
-          />
+          <img src="./images/emoticon.webp" alt="smail" width="500" />
         </div>
 
         <ul class="gallery__list">
