--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -55,7 +55,7 @@
           </div>
         </div>
         <button class="mob-menu__open-btn" data-menu-open>
-          <svg class="mob-menu__open-icon" width="40" , height="40">
+          <svg class="mob-menu__open-icon" width="40" height="40">
             <use href="./images/sprite.svg#icon-menu"></use>
           </svg>
         </button>
