--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,7 +11,8 @@
       </div>
       <div class="header-control">
 
-        <nav class="nav-list">
+        <nav >
+          <ul class="nav-list">
           <li class="nav-list__item-home nav-list__item">
             <a
               href="#"
@@ -29,7 +30,7 @@
               data-library
               >MY LIBRARY</a
             >
-          </li>
+          </li></ul>
 
         </nav>
         <div class="autorization">
